deploy/argo-workflows/ingress-argo-workflows.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-workflows
  namespace: argo-workflows
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - secretName: argo-workflows-tls
      hosts:
        - argo-workflows.group-jsti.dski23a.timebertt.dev
  rules:
    - host: argo-workflows.group-jsti.dski23a.timebertt.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-workflows-server
                port:
                  number: 2746
